Fix inline canvas alignment.

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -11,6 +11,7 @@ body {
     image-rendering: -webkit-crisp-edges;
     image-rendering: pixelated;
     image-rendering: crisp-edges;
+    vertical-align: bottom;
 }
 
 #bufferCanvas,
